esphome/esphome-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: esphome
spec:
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: esphome
  template:
    metadata:
      labels:
        app: esphome
    spec:
      volumes:
        - name: esphome-pv-storage
          persistentVolumeClaim:
            claimName: esphome-pv-claim
      containers:
        - image: esphome/esphome:latest
          name: esphome
          ports:
          - containerPort: 6052
          volumeMounts:
          - mountPath: "/config"
            name: esphome-pv-storage
