esphome/esphome-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: esphome
  labels:
    app: esphome
spec:
  selector:
    app: esphome
  ports:
  - port: 80
    name: http
    targetPort: 6052
