esphome/esphome-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: esphome
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: esphome.sievert.fun
    http:
      paths:
      - backend:
          serviceName: esphome
          servicePort: 80
  tls:
  - hosts:
    - esphome.sievert.fun
    secretName: esphome-cert
